Change tooltips and player/fight selection popover to be less transparent Fix z-index issue with player/fight selection

--- a/src/Main/App.css
+++ b/src/Main/App.css
@@ -508,9 +508,12 @@ table.data-table .performance-bar {
   background-color: #ffffff;
 }
 
-.__react_component_tooltip {
+.__react_component_tooltip.show {
+  opacity: 1;
   text-align: left;
   max-width: 600px;
+  padding: 8px 15px;
+  border-radius: 4px;
 }
 .__react_component_tooltip.type-dark {
   background: rgba(10, 10, 10, 0.9) !important;
@@ -707,10 +710,16 @@ code.inactive {
   line-height: 1em;
   left: 15px;
   top: 66px;
-  width: 600px;
+  width: 700px;
+  z-index: 10;
   max-width: calc(100vw - 45px);
 }
-
 .selectorHeader .panel {
-  background: rgba(0,0,0,0.75);
+  background: rgba(0,0,0,0.9);
+}
+.fight-boss-name {
+  min-width: 30%;
+}
+.selectorHeader .fight-boss-name {
+  min-width: 50%;
 }
